--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,6 @@
 <script src="js/portfolio.js"></script>
 <link href='http://fonts.googleapis.com/css?family=Copse&effect=outline' rel='stylesheet' type='text/css'>
 
-
-
 <style type="text/css">
 
 html, body {
@@ -15,6 +13,10 @@ html, body {
 	height: 100%;
 	width: 100%;
 	font-family: 'Copse', serif;
+}
+
+.set-link {
+	cursor: pointer;
 }
 
 #bar {
@@ -70,11 +72,11 @@ div, footer {
 	border-width: 1px;
 	padding-left: 1em;
 	padding-top: 1em;
-	margin-bottom: 1em;
+	margin-bottom: 1.5em;
 }
 
 #main {
-	max-width: 100%;
+	width: 100%;
 	height: 20em;
 	border-bottom-style: solid;
 	border-width: 1px;
@@ -82,49 +84,42 @@ div, footer {
 }
 
 .slide-one {
-	position: absolute;
-	top: 20em;
+	position: fixed;
 	left: 30%;
 	z-index: 400;
+	
+	max-width: 40%;
+	max-height: 40%;	
 }
 
 .slide-two {
-	position: absolute;
-	top: 12em;
-	left: 40%;	
+	position: fixed;
+	left: 45%;
 	z-index: 300;
 	
-	transform: rotate(3deg);
-	-ms-transform: rotate(3deg);
-	-webkit-transform: rotate(3deg);	
+	max-width: 35%;
+	max-height: 35%;	
+	
+	transform: rotate(2deg);
+	-ms-transform: rotate(2deg);
+	-webkit-transform: rotate(2deg);	
 }
 
 .slide-three {
-	position: absolute;
-	top: 12.5em;
-	left: 45%;
+	position: fixed;
+	left: 55%;
 	z-index: 200;
 	
-	transform: rotate(3.5deg);
-	-ms-transform: rotate(3.5deg);
-	-webkit-transform: rotate(3.5deg);
-}
-
-.slide-four {
-	position: absolute;
-	top: 12em;
-	left: 50%;
-	z-index: 100;
+	max-width: 30%;
+	max-height: 30%;	
 	
-	transform: rotate(4deg);
-	-ms-transform: rotate(4deg);
-	-webkit-transform: rotate(4deg);
+	transform: rotate(2.5deg);
+	-ms-transform: rotate(2.5deg);
+	-webkit-transform: rotate(2.5deg);
 }
 
 .slide {	
 	box-shadow: 10px 15px 50px #000000;
-	max-width: 40%;
-	max-height: 40%;
 }
 
 .inactive-slide {
@@ -153,7 +148,7 @@ div, footer {
 	text-align: right;
 	text-transform: uppercase;	
 	font-style:italic;
-	font-size: 3em;
+	font-size: 3.5em;
 	float: right;
 	color: white;
 	width: 40%;
@@ -186,20 +181,20 @@ footer {
 		<div id="set-titles"></div>
 
 		<img class="slide slide-one"></img>	
-		
+
 		<img class="slide slide-two"></img>
 
-		<img class="slide slide-three"></img>
-		
-		<img class="slide slide-four"></img>
+		<img class="slide slide-three"></img>	
 
 		<div id="set-description" class="font-effect-outline"></div>
 		
 	</div>
 	
+<!--
 	<footer>
-		copyright 2013.
+		
 	</footer>
+-->
 
 </body>
 </html>
