--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,13 @@ div, footer {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#b7b7b7',GradientType=0 );
 }
 
+#logo {
+	margin: auto;
+	width: 50%;
+	height: 5em;
+	text-align: center;
+}
+
 #intro {
 	margin: auto;
 	width: 50%;
@@ -72,33 +79,31 @@ div, footer {
 	border-width: 1px;
 	padding-left: 1em;
 	padding-top: 1em;
-	margin-bottom: 3em;
+	margin-bottom: 1em;
 }
 
-#main {
-	width: 100%;
-	height: 20em;
+#portfolio {
+	width: 50em;
+	height: 22em;
+	margin: auto;
 	border-bottom-style: solid;
 	border-width: 1px;
-	border-color: black;	
+	border-color: black;
 }
 
 .slide-one {
-	position: fixed;
-	left: 30%;
+	position: relative;
+	float: left;
+	left: 1em;
 	z-index: 400;
-	
-	max-width: 40%;
-	max-height: 40%;	
 }
 
 .slide-two {
-	position: fixed;
-	left: 45%;
-	z-index: 300;
-	
-	max-width: 35%;
-	max-height: 35%;	
+	position: relative;
+	float: right;
+	left: -5em;
+	top: -13em;	
+	z-index: 300;	
 	
 	transform: rotate(2deg);
 	-ms-transform: rotate(2deg);
@@ -106,12 +111,10 @@ div, footer {
 }
 
 .slide-three {
-	position: fixed;
-	left: 55%;
-	z-index: 200;
-	
-	max-width: 30%;
-	max-height: 30%;	
+	position: relative;	
+	left: 27em;
+	top: -23em;
+	z-index: 200;	
 	
 	transform: rotate(2.5deg);
 	-ms-transform: rotate(2.5deg);
@@ -119,7 +122,9 @@ div, footer {
 }
 
 .slide {	
-	box-shadow: 10px 15px 50px #000000;
+	box-shadow: 10px 15px 50px #000000;	
+	height: 15em;
+	width: auto;
 }
 
 .inactive-slide {
@@ -144,15 +149,15 @@ div, footer {
 
 #set-description {
 	overflow: hidden;
+	margin: auto;
+	width: 14em;
+	position: relative;
+	top: 6em;
 	opacity: 0.4;
 	text-align: right;
-	text-transform: uppercase;	
-	font-style:italic;
+	text-transform: uppercase;
 	font-size: 3.5em;
-	float: right;
 	color: white;
-	width: 40%;
-	height: 100%;
 }
 
 footer {
@@ -168,6 +173,8 @@ footer {
 	
 	<div id="bar"></div>
 	
+	<div id="logo">logo</div>
+	
 	<div id="intro">hello, my name is <span id="me" class="font-effect-outline">Jemma</span>.</div>
 	
 	<div id="byline">graphic designer, photographer.</div>
@@ -175,8 +182,10 @@ footer {
 	<div id="bio">
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eleifend bibendum magna, at vestibulum diam pharetra vel. Curabitur ut elementum mi. Suspendisse posuere ligula consequat dolor euismod sit amet viverra dolor sagittis. Nullam tristique rutrum diam, ut placerat magna vulputate ut.
 	</div>
+
+	<div id="set-description" class="font-effect-outline"></div>
 	
-	<div id="main" class="grey-gradient">
+	<div id="portfolio" class="grey-gradient">
 		
 		<div id="set-titles"></div>
 
@@ -185,8 +194,6 @@ footer {
 		<img class="slide slide-two"></img>
 
 		<img class="slide slide-three"></img>	
-
-		<div id="set-description" class="font-effect-outline"></div>
 		
 	</div>
 	
