--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ div, footer, img {
 	width: 50%;
 	min-width: 447px;
 	text-align: left;
+	vertical-align: baseline;
 	padding-top: 0.5em;
 	font-size: 2.7em;
 	font-family: 'Pacifico', serif;
@@ -53,7 +54,7 @@ div, footer, img {
 	margin: auto;
 	width: 50%;
 	min-width: 447px;
-	text-align: right;
+	text-align: left;
 	margin-top: 2em;
 	margin-bottom: 0.5em;
 	font-style: italic;
@@ -66,7 +67,6 @@ div, footer, img {
 	min-width: 447px;
 	border-top-style: solid;
 	border-width: 1px;
-	padding-left: 1em;
 	padding-top: 1em;
 	padding-bottom: 0.5em;
 	margin-bottom: 1em;
@@ -130,7 +130,7 @@ div, footer, img {
 #set-titles {
 	text-align: right;
 	height: 90%;
-	width: 20%;
+	width: 22%;
 	padding-top: 1em;
 	padding-right: 2em;
 	font-size: 1.2em;
