--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@ html, body {
 }
 
 div, footer, img {
-	//border-style: solid;
+	//border-style: solid;border-width: 1px;
+}
+
+#fixed-nav {
+	position: fixed;
+	overflow: hidden;
+	height: 100%;
+	width: 18em;
+	left: 1em;
+	padding-right: 0.5em;
+	z-index: 1000;
+	background-image:url('images/TransparentBackground.png');
 }
 
 .logo {
@@ -41,51 +52,52 @@ div, footer, img {
 
 #intro {
 	margin: auto;
-	width: 50%;
-	min-width: 447px;
 	text-align: left;
 	vertical-align: baseline;
 	padding-top: 0.5em;
-	font-size: 2.7em;
+	font-size: 1.75em;
 	font-family: 'Pacifico', serif;
 }
 
 #byline {
 	margin: auto;
-	width: 50%;
-	min-width: 447px;
 	text-align: left;
 	margin-top: 2em;
 	margin-bottom: 0.5em;
 	font-style: italic;
-	font-size: 1.25em;
+	font-size: 0.95em;
 }
 
 #bio {
 	margin: auto;
-	width: 50%;
-	min-width: 447px;
 	border-top-style: solid;
 	border-width: 1px;
 	padding-top: 1em;
 	padding-bottom: 0.5em;
 	margin-bottom: 1em;
+	font-size: 0.8em;
+}
+
+footer {
+	position: absolute;
+	top: 52em;
+	text-align: center;
+	font-size: 0.75em;
 }
 
 #portfolio {
-	width: 100%;
-	min-width: 447px;
-	height: 24em;
-	margin: auto;
-	display: inline-block;
-	overflow: hidden;
+	position: relative;
+	left: 20em;
+	top: 10em;
+	min-width: 100%;
+	height: 30em;
 }
 
 #slide-set {
-	position: absolute;
-	overflow: hidden;
+	position: relative;
 	display: inline-block;
-	min-width: 1000px;
+	height: 100%;
+	width: 100%;
 }
 
 .slide-one {
@@ -129,14 +141,9 @@ div, footer, img {
 
 #set-titles {
 	text-align: right;
-	height: 90%;
-	width: 22%;
-	padding-top: 1em;
-	padding-right: 2em;
 	font-size: 1.2em;
-	border-right-style: solid;
-	border-width: 1px;
-	float: left;
+	width: 90%;
+	margin: auto;
 }
 
 #fullscreen-image {
@@ -158,24 +165,11 @@ div, footer, img {
 	vertical-align: top;
 	font-size: 0.8em;
 	font-style: italic;
-	border-bottom-style: solid;
-	border-width: 1px;
-	border-color: black;	
 }
 
 .control-key {
 	height: 2.2em;
 	cursor: pointer;
-}
-
-footer {
-	width: 50%;
-	text-align: center;
-	padding-top: 1em;
-	padding-bottom: 1em;
-	height: 1em;
-	margin: 0px auto;
-	font-size: 0.75em;
 }
 		
 </style>
@@ -190,31 +184,39 @@ footer {
 	
 	<div id="bar"></div>
 	
-	<div id="intro"><img class="logo" src="images/JETlogo.jpg"></img> hello, my name is Jemma.</div>
+	<div id="fixed-nav">
 	
-	<div id="byline">graphic designer, photographer.</div>
+		<div id="intro"><img class="logo" src="images/JETlogo.jpg"></img> hello, my name is Jemma.</div>
+		
+		<div id="byline">graphic designer, photographer.</div>
+		
+		<div id="bio">
+			My grandfather gave me his old SLR when I was about 14 years old. I was immediately <i>hooked</i>. Although I've upgraded my camera since then, I still have and use his when I want to reminisce with film photography, a medium that should never be lost.
+			<p>
+			During university, graphic design became an equally important passion in my life. It is a career that I <i>love</i>.
+		</div>
+		
+		<div id="set-titles"></div>
+		
+		<footer><i>Copyright 2013, Jemma Elise Tockuss, jemmaelise@live.com</i></footer>
 	
-	<div id="bio">
-		My grandfather gave me his old SLR when I was about 14 years old. I was immediately <i>hooked</i>. Although I've upgraded my camera since then, I still have and use his when I want to reminisce with film photography, a medium that should never be lost.
-		<p>
-		During university, graphic design became an equally important passion in my life. It is a career that I <i>love</i>.
 	</div>
 	
 	<div id="portfolio">		
-		<div id="set-titles"></div>
 		<div id="slide-set">
-		<img class="slide slide-one"></img><img class="slide thumbnail slide-two"></img><img class="slide thumbnail slide-three"></img>
+			<img class="slide slide-one"></img><img class="slide thumbnail slide-two"></img><img class="slide thumbnail slide-three"></img>
 		</div>
 	</div>
+	
+	<!--
 	<div id="slide-controls">
 		click<img class="control-key" onclick="uiShiftSlides(-1)" src="images/Arrowbuttons-01.png"/>or<img class="control-key" onclick="uiShiftSlides(1)" src="images/Arrowbuttons-02.png"/>to see more
 	</div>
+	-->
 	
 	<div id="image-modal">
 		<img id="fullscreen-image" onclick="hideImageModal()"></img>
 	</div>
-	
-	<footer><i>Copyright 2013, Jemma Elise Tockuss, jemmaelise@live.com</i></footer>
 
 </body>
 </html>
