some font changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 <script src="js/portfolio.js"></script>
-<link href='http://fonts.googleapis.com/css?family=Copse&effect=outline' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
 <style type="text/css">
@@ -13,7 +13,7 @@ html, body {
 	margin: 0;
 	height: 100%;
 	width: 100%;
-	font-family: 'Copse', serif;
+	font-family: 'Muli', serif;
 }
 
 .set-link {
@@ -38,36 +38,23 @@ div, footer, img {
 	position: fixed;
 	overflow: hidden;
 	height: 100%;
-	width: 18em;
+	width: 17em;
 	left: 1em;
-	padding-right: 0.65em;
+	padding-right: 0.8em;
 	padding-left: 0.5em;
 	z-index: 1000;
 	background-image:url('images/TransparentBackground.png');
 }
 
 .logo {
-	height: 3.2em;
-	float: left;
-	margin-right: 0.25em;
+	width: 17em;
 }
 
 #intro {
 	margin: auto;
 	text-align: left;
 	vertical-align: baseline;
-	padding-top: 0.5em;
-	font-size: 1.75em;
-	font-family: 'Pacifico', serif;
-}
-
-#byline {
-	margin: auto;
-	text-align: left;
-	margin-top: 2em;
-	margin-bottom: 0.5em;
-	font-style: italic;
-	font-size: 0.95em;
+	padding-top: 4em;
 }
 
 #bio {
@@ -118,6 +105,7 @@ footer {
 #set-titles {
 	text-align: right;
 	font-size: 1.2em;
+	text-transform:uppercase;
 	width: 90%;
 	margin: auto;
 }
@@ -155,9 +143,7 @@ footer {
 	
 	<div id="fixed-nav">
 	
-		<div id="intro"><img class="logo" src="images/je-logo.png"></img> hello, my name is Jemma.</div>
-		
-		<div id="byline">graphic designer, photographer.</div>
+		<div id="intro"><img class="logo" src="images/JE-Logo-purp-01.png"></img></div>
 		
 		<div id="bio">
 			My grandfather gave me his old SLR when I was about 14 years old. I was immediately <i>hooked</i>. Although I've upgraded my camera since then, I still have and use his when I want to reminisce with film photography, a medium that should never be lost.
