--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html ng-app="portfolio">
 <head>
 	
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.min.js"></script>
+<script src="js/jquery-1.9.1.js"></script>
+<script src="js/angular.min.js"></script>
 <script src="js/portfolio.js"></script>
 <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
@@ -152,7 +152,7 @@ footer {
 	</div>
 	
 	<div id="slide-controls">		
-		<span id="slide-reset" ng-click="resetSlides()">scroll this way &#8644;</span>
+		<span id="slide-reset" ng-click="resetSlides()">scroll &#8644;</span>
 	</div>
 
 </body>
