new hero splash

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 			</div>
 		</header>
 		
-		<div class="intro-div">
-			<article class="intro-article">
-			Excelsior!
+		<div class="hero-div">
+			<article class="hero-statement">
+			Welcome
 			</article>
 		</div>
 		
@@ -44,7 +44,7 @@
 		</div>
 		
 		<footer>
-			Copyright 2014, Jemma Elise Tockuss, jemmaelise@live.com
+			Copyright 2015, Jemma Elise Tockuss, jemmaelise@live.com
 		</footer>
 
 	</body>
