removed dead js code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	</head>
 
-	<body ng-controller="PortfolioController" onload="bodyReady()">
+	<body ng-controller="PortfolioController">
 		
 		<header>
 			<div class="logo-div">
